# auth-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  REDME.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
src/: alembic.ini  create_app.py  main.py
src/alembic/: env.py
src/alembic/versions/: 2026_01_20_1545-365f0dbd6ac6_first_mg.py  2026_01_24_1831-c8d989863f89_added_the_refreshtoken_model.py  2026_01_28_1804-feb69ed5c8fe_added_the_refreshtoken_model.py  2026_02_02_1626-86420b6a78da_added_the_passwordresettoken_model.py  2026_02_05_1444-43caa20803f5_update_the_passwordresettoken_model.py  2026_03_03_1251-7ae82d5aade4_create_user_model.py  2026_03_03_1252-d312a9875c76_create_usertoken_model.py  2026_03_03_1252-f76402fe2c7f_create_refreshtoken_model.py
src/api/: __init__.py  auth.py
src/api/auth/: views.py
src/core/: __init__.py  config.py  exceptions.py  jinja_templates.py  security.py
src/core/security/: __init__.py  authentication.py  security.py
src/dto/: auth_dto.py  user_dto.py
src/infrastructure/: __init__.py
src/infrastructure/broker/: __init__.py  rb_broker.py
src/infrastructure/db/: db_helper.py  util.py
src/infrastructure/mailing/: email_manager.py
src/infrastructure/repo/: base_sqlalchemy_repo.py  reset_token_repo.py  token_repo.py  user_repo.py  (+1 more)
src/schemas/: auth_schemas.py  base_schemas.py  user_schemas.py
src/services/: auth_service.py  user_service.py
src/templates/: base.html  reset-password.html
src/views/: __init__.py  auth.py  reset_password.py
tests/unit/: test_security.py
(+7 files in other folders)
